--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,9 @@
         "browser": true,
         "es2020": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "airbnb-base"
+    ],
     "parserOptions": {
         "ecmaVersion": 11,
         "sourceType": "module"
