--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,16 @@
         "es2020": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "prettier"
     ],
+    "plugins": ["prettier"],
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 11,
         "sourceType": "module"
     },
     "rules": {
+        "prettier/prettier": ["error"]
     }
 }
